--- a/src/chartgeneration-tool-zabbix-downloader/build.xml
+++ b/src/chartgeneration-tool-zabbix-downloader/build.xml
@@ -13,7 +13,7 @@
 		<mkdir dir="${lib}" />
 	</target>
 	<target name="build" depends="init">
-		<javac target="1.7" source="1.7" srcdir="${src}" destdir="${build}" includeantruntime="false">
+		<javac target="1.7" source="1.7" srcdir="${src}" destdir="${build}" includeantruntime="false" encoding="UTF-8">
 			<classpath>
 				<pathelement location="${lib}/chartgeneration-core.jar" />
  			</classpath>
