--- a/generator/build.gradle
+++ b/generator/build.gradle
@@ -27,17 +27,20 @@ jar.doFirst {
     }
 }
 
-apply plugin: 'distribution'
-
-distributions {
-    main {
-        contents {
-            from(configurations.runtime) {
-                into('lib')
-            }
-            from(jar) {
-                into('lib')
-            }
-        }
-    }
-}
+//apply plugin: 'distribution'
+//
+//distributions {
+//    main {
+//        contents {
+//            from("src/main/dist/bin"){
+//                into('bin')
+//            }
+//            from(configurations.runtime) {
+//                into('lib')
+//            }
+//            from(jar) {
+//                into('lib')
+//            }
+//        }
+//    }
+//}
