--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ subprojects {
     apply plugin: 'distribution'
 
     group = "io.github.vfreex.perfcharts"
-    version = "1.0.1-SNAPSHOT"
+    version = "1.0.1"
 
     // Add Javadoc JAR and sources JAR to artifact
     task sourcesJar(type: Jar) {
